--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@clerk/nextjs": "^6.36.7",
     "@clerk/themes": "^2.4.47",
     "@hookform/resolvers": "^5.2.2",
+    "@mantine/core": "^8.3.13",
+    "@mantine/hooks": "^8.3.13",
+    "@mantine/notifications": "^8.3.13",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-checkbox": "^1.3.3",
@@ -33,7 +36,6 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@sentry/nextjs": "^10.34.0",
     "@tabler/icons-react": "^3.36.1",
-    "@tanstack/react-table": "^8.21.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -42,6 +44,7 @@
     "exceljs": "^4.4.0",
     "kbar": "^0.1.0-beta.48",
     "lucide-react": "^0.562.0",
+    "mantine-datatable": "^8.3.13",
     "next": "16.1.2",
     "next-themes": "^0.4.6",
     "nextjs-toploader": "^3.9.17",
